<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_store_white_24dp"
        android:title="@string/title_book" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_reading"
        android:icon="@drawable/ic_bookmark_black_36dp"
        android:title="@string/title_reading" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/title_me" />


</menu>